--- a/cln-grpc/Cargo.toml
+++ b/cln-grpc/Cargo.toml
@@ -15,7 +15,7 @@ server = ["cln-rpc"]
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
-cln-rpc = { path = "../cln-rpc/", version = "0.4", optional = true }
+cln-rpc = { workspace = true, optional = true }
 cfg-if = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tonic = { version = "0.11", features = ["tls", "transport"] }
@@ -29,7 +29,7 @@ tokio-util = "0.7.10"
 
 [dev-dependencies]
 serde_json = "1.0.72"
-cln-rpc = { path = "../cln-rpc/", version = "0.4" }
+cln-rpc = { workspace = true }
 
 [build-dependencies]
 tonic-build = "0.11"
