--- a/plugins/grpc-plugin/Cargo.toml
+++ b/plugins/grpc-plugin/Cargo.toml
@@ -17,9 +17,9 @@ anyhow = "1.0"
 log = "0.4"
 rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
 prost = "0.12"
-cln-grpc = { version = "0.4", features = ["server"], path = "../../cln-grpc"}
-cln-plugin = { version = "0.4", path = "../../plugins" }
-cln-rpc = { version = "0.4", path = "../../cln-rpc" }
+cln-grpc = { workspace = true, features = ["server"]}
+cln-plugin = { workspace = true }
+cln-rpc = { workspace = true }
 serde_json = "1.0.113"
 
 [dependencies.tokio]
