ci: use older rust version so cargo lock version is not bumped

--- a/.github/workflows/crate-bump.yml
+++ b/.github/workflows/crate-bump.yml
@@ -47,7 +47,7 @@ jobs:
         echo "DISTRIBUTION LOCATION: $DISTLOCATION"
 
     - name: Setup rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@1.75
 
     - name: Install cargo release
       run: |
