--- a/.github/workflows/crate-bump.yml
+++ b/.github/workflows/crate-bump.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Install cargo release
       run: |
-        cargo install cargo-release --version v0.25.10
+        cargo install cargo-release --version 0.25.10
 
     - name: Bump pre-release version
       if: github.repository == 'daywalker90/lightning' && steps.set-values.outputs.DISTLOCATION == 'test'
