--- a/.github/workflows/crate-bump.yml
+++ b/.github/workflows/crate-bump.yml
@@ -39,15 +39,19 @@ jobs:
         if [[ "${{ github.event.inputs.dist-location }}" != "" ]]; then
           DISTLOCATION=${{ github.event.inputs.dist-location }}
         elif [[ "${{ github.ref_type }}" == "tag" ]]; then
-          if [[ ! "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+$ ]]; then
-            DISTLOCATION="major"
+          if [[ ! "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+[0-9a-z]+$ ]]; then
+            DISTLOCATION="rc"
           elif [[ ! "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             DISTLOCATION="minor"
+          elif [[ ! "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+$ ]]; then
+            DISTLOCATION="major"
           else
-            DISTLOCATION="rc"
+            echo "Tag format not recognized"
+            exit 1
           fi
         else
-          DISTLOCATION="rc"
+          echo "Neither tag nor workflow dispatch"
+          exit 1
         fi
         echo "DISTLOCATION=$DISTLOCATION" >> $GITHUB_OUTPUT
         echo "EVENT DISTLOCATION: ${{ github.event.inputs.dist-location }}"
