chore: add libffi
missing libffi fails coincurve installation

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -45,7 +45,8 @@ jobs:
             jq \
             protobuf \
             curl \
-            uv
+            uv \
+            libffi
 
             python3.10 -m ensurepip
             python3.10 -m pip install --upgrade pip
