channeld: Add extra_tlvs to incomming wire msg
This appends the extra_tlvs to the internal channeld_offer_htlc wire
msg. We also recombine the extra_tlvs with the blinded path key for
forwarding htlcs.

Signed-off-by: Peter Neuroth <pet.v.ne@gmail.com>

--- a/wallet/test/Makefile
+++ b/wallet/test/Makefile
@@ -30,9 +30,11 @@ WALLET_TEST_COMMON_OBJS :=			\
 	common/utxo.o				\
 	common/wireaddr.o			\
 	common/version.o			\
+	common/bigsize.o			\
 	wallet/db_sqlite3_sqlgen.o		\
 	wire/towire.o				\
-	wire/fromwire.o
+	wire/fromwire.o				\
+	wire/tlvstream.o
 
 $(WALLET_TEST_PROGRAMS): $(BITCOIN_OBJS) $(WALLET_TEST_COMMON_OBJS)
 $(WALLET_TEST_OBJS): $(WALLET_HDRS) $(WALLET_SRC)
