refactor: pyproject.toml poetry to uv + hatch
make use of standard keys for project and dependeny specification

- provide sources to run uv build so that it can refer local packages
- using hatchling for build as is stock build option
- use optional-dependencies.dev for dev-dependencies
- add hatch targets for packages and includes where unclear

Changelog-Update: use uv with hatchling instead of poetry

--- a/contrib/pyln-client/pyproject.toml
+++ b/contrib/pyln-client/pyproject.toml
@@ -1,25 +1,23 @@
-[tool.poetry]
+[project]
 name = "pyln-client"
 version = "25.05"
 description = "Client library and plugin library for Core Lightning"
-authors = ["Christian Decker <decker.christian@gmail.com>"]
-license = "BSD-MIT"
+authors = [{ name = "Christian Decker", email = "decker.christian@gmail.com" }]
+license = { text = "BSD-MIT" }
 readme = "README.md"
+requires-python = ">=3.8,<4.0"
+dependencies = ["pyln-proto>=23", "pyln-bolt7>=1.0"]
 
-packages = [
-  { include = "pyln/client" },
-]
+[dependency-groups]
+dev = ["pytest>=7.0.0", "pyln-bolt7", "pyln-proto"]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-pyln-proto = ">=23"
-pyln-bolt7 = ">=1.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7"
-pyln-bolt7 = { path = "../pyln-spec/bolt7", develop = true }
-pyln-proto = { path = "../pyln-proto", develop = true}
+[tool.hatch.build.targets.wheel]
+packages = ["pyln"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling>=1.0.0"]
+build-backend = "hatchling.build"
+
+[tool.uv.sources]
+pyln-proto = { workspace = true }
+pyln-bolt7 = { workspace = true }
