--- a/contrib/cln-tracer/pyproject.toml
+++ b/contrib/cln-tracer/pyproject.toml
@@ -1,16 +1,17 @@
-[tool.poetry]
+[project]
 name = "cln-tracer"
 version = "0.1.0"
 description = ""
-authors = ["Christian Decker <decker.christian@gmail.com>"]
+authors = [
+    {name = "Christian Decker", email = "decker.christian@gmail.com"}
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-bcc = "^0.1.10"
-opentelemetry-proto = "^1.21.0"
-
+requires-python = ">=3.8,<4.0"
+dependencies = [
+    "bcc>=0.1.10",
+    "opentelemetry-proto>=1.21.0"
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling>=1.0.0"]
+build-backend = "hatchling.build"
