--- a/contrib/msggen/pyproject.toml
+++ b/contrib/msggen/pyproject.toml
@@ -1,10 +1,19 @@
-[tool.poetry]
+[project]
 name = "msggen"
 version = "0.1.0"
 description = "A utility to transform wire messages and JSON-RPC messages to arbitrary target languages."
-authors = ["Christian Decker <decker@blockstream.com>"]
-license = "BSD-MIT"
+authors = [{ name = "Christian Decker", email = "decker@blockstream.com" }]
+license = { text = "BSD-MIT" }
+requires-python = ">=3.6,<4.0"
+dependencies = []
 
+[dependency-groups]
+dev = ["pytest>=6.2.5"]
+
+[project.scripts]
+msggen = "msggen.__main__:main"
+
+[tool.hatch.build.targets.wheel]
 include = ["msggen/schema.json"]
 
 
@@ -15,8 +24,5 @@ python = "^3.6"
 pytest = "^6.2.5"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-msggen = 'msggen.__main__:main'
+requires = ["hatchling>=1.0.0"]
+build-backend = "hatchling.build"
