--- a/contrib/pyln-spec/bolt2/pyproject.toml
+++ b/contrib/pyln-spec/bolt2/pyproject.toml
@@ -1,20 +1,25 @@
-[tool.poetry]
+[project]
 name = "pyln-bolt2"
 version = "1.0.3.246"
 description = "A pure python implementation of BOLT2"
-authors = ["Rusty Russell <rusty@blockstream.com>"]
-license = "MIT"
+authors = [
+    {name = "Rusty Russell", email = "rusty@blockstream.com"}
+]
+license = {text = "MIT"}
+requires-python = ">=3.8,<4.0"
+dependencies = []
 
-packages = [
-  { include = "pyln/spec/bolt2" },
+[dependency-groups]
+dev = [
+  "pyln-proto>=0.10.2"
 ]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-
-[tool.poetry.group.dev.dependencies]
-pyln-proto = "^0.10.2"
+[tool.hatch.build.targets.wheel]
+packages = ["pyln"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling>=1.0.0"]
+build-backend = "hatchling.build"
+
+[tool.uv.sources]
+pyln-proto = { workspace = true }
