--- a/tests/fuzz/Makefile
+++ b/tests/fuzz/Makefile
@@ -9,15 +9,8 @@ tests/fuzz/fuzz-hmac-sha256: LDLIBS += -lcrypto
 tests/fuzz/fuzz-wire-*.o: tests/fuzz/wire.h
 tests/fuzz/fuzz-bolt12-*.o: tests/fuzz/bolt12.h
 
-tests/fuzz/fuzz-handle_onion_message:	common/sphinx.o				\
-					common/blindedpath.o			\
-					common/hmac.o				\
-					common/blinding.o			\
-					common/onionreply.o			\
-					common/dev_disconnect.o			\
-					common/onion_message_parse.o		\
-	                                connectd/onion_message.o		\
-					connectd/connectd_wiregen.o
+tests/fuzz/fuzz-handle_onion_message: connectd/onion_message.o connectd/connectd_wiregen.o
+tests/fuzz/fuzz-full_channel: channeld/full_channel.o channeld/commit_tx.o
 
 FUZZ_TARGETS_SRC := $(wildcard tests/fuzz/fuzz-*.c)
 FUZZ_TARGETS_OBJS := $(FUZZ_TARGETS_SRC:.c=.o)
