--- a/contrib/pyln-proto/pyproject.toml
+++ b/contrib/pyln-proto/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.8,<4.0"
 dependencies = [
     "base58>=2.1.1",
     "bitstring>=4.1.0",
-    "coincurve>=20",
+    "coincurve==20.0.0",
     "cryptography>=42",
     "PySocks>=1"
 ]
