--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -594,25 +594,6 @@ jobs:
           cat config.vars
           VALGRIND=0 uv run eatmydata pytest tests/ -vvv -n ${PYTEST_PAR} ${PYTEST_OPTS}
 
-  check-flake:
-    name: Check Nix Flake
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: true
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
-      - name: Check Nix flake inputs
-        uses: DeterminateSystems/flake-checker-action@v12
-      - name: Install Nix
-        uses: cachix/install-nix-action@V31
-        with:
-          nix_path: nixpkgs=channel:nixos-25.05
-      - name: Check flake
-        run: nix flake check .?submodules=1#
-
   gather:
     # A dummy task that depends on the full matrix of tests, and
     # signals successful completion. Used for the PR status to pass
@@ -625,19 +606,17 @@ jobs:
       - integration-valgrind
       - integration-sanitizers
       - min-btc-support
-      - check-flake
     if: ${{ always() }}
     steps:
       - name: Complete
         env:
-          JOB_NAMES: "INTEGRATION CHECK_UNITS VALGRIND SANITIZERS BTC FLAKE"
+          JOB_NAMES: "INTEGRATION CHECK_UNITS VALGRIND SANITIZERS BTC"
           INTEGRATION: ${{ needs.integration.result }}
           CHECK_UNITS: ${{ needs['check-units'].result }}
           VALGRIND: ${{ needs['integration-valgrind'].result }}
           SANITIZERS: ${{ needs['integration-sanitizers'].result }}
           DOCS: ${{ needs['update-docs-examples'].result }}
           BTC: ${{ needs['min-btc-support'].result }}
-          FLAKE: ${{ needs['check-flake'].result }}
         run: |
           failed=""
           for name in $JOB_NAMES; do
