bkpr: expose `struct bkpr` to outside bookkeeper.c.
We're going to add more members here, so we will start handing around
the whole thing.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/bkpr/Makefile
+++ b/plugins/bkpr/Makefile
@@ -20,6 +20,7 @@ BOOKKEEPER_SRC := $(BOOKKEEPER_PLUGIN_SRC) $(BOOKKEEPER_DB_QUERIES)
 BOOKKEEPER_HEADER := 				\
 	plugins/bkpr/account.h			\
 	plugins/bkpr/account_entry.h		\
+	plugins/bkpr/bookkeeper.h		\
 	plugins/bkpr/chain_event.h		\
 	plugins/bkpr/channel_event.h		\
 	plugins/bkpr/channelsapy.h		\
