]bkpr: save accounts in the datastore instead of database.
Note that the test where we remove the database causes the bookkeeper
plugin to assert, since we have removed part (but not all!) of its data
by removing the datastore.

Once the transition to the datastore is complete, this can be restored.

Note that we destroy the request before receiving a response, which causes
a message in the trace span which was confusing our test.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/bkpr/test/Makefile
+++ b/plugins/bkpr/test/Makefile
@@ -14,6 +14,7 @@ BOOKKEEPER_TEST_COMMON_OBJS :=			\
 	common/coin_mvt.o			\
 	common/features.o			\
 	common/json_stream.o			\
+	common/json_parse_simple.o		\
 	common/key_derive.o			\
 	common/memleak.o			\
 	common/node_id.o			\
@@ -27,6 +28,8 @@ BOOKKEEPER_TEST_COMMON_OBJS :=			\
 	db/db_sqlite3.o				\
 	db/exec.o				\
 	db/utils.o				\
+	wire/towire.o				\
+	wire/fromwire.o				\
 	plugins/bkpr/db_sqlite3_sqlgen.o
 
 $(BOOKKEEPER_TEST_PROGRAMS): $(BITCOIN_OBJS) $(BOOKKEEPER_TEST_COMMON_OBJS)
