bkpr: add in-mem & datastore storage for external blockheights.
We won't be able to "UPDATE chain_events", so keep a separate record
of these blockheights, and lookup that when the blockheight is 0.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/bkpr/Makefile
+++ b/plugins/bkpr/Makefile
@@ -3,6 +3,7 @@
 BOOKKEEPER_PLUGIN_SRC := 			\
 	plugins/bkpr/account.c			\
 	plugins/bkpr/account_entry.c		\
+	plugins/bkpr/blockheights.c		\
 	plugins/bkpr/bookkeeper.c		\
 	plugins/bkpr/chain_event.c		\
 	plugins/bkpr/channel_event.c		\
@@ -22,6 +23,7 @@ BOOKKEEPER_SRC := $(BOOKKEEPER_PLUGIN_SRC) $(BOOKKEEPER_DB_QUERIES)
 BOOKKEEPER_HEADER := 				\
 	plugins/bkpr/account.h			\
 	plugins/bkpr/account_entry.h		\
+	plugins/bkpr/blockheights.h		\
 	plugins/bkpr/bookkeeper.h		\
 	plugins/bkpr/chain_event.h		\
 	plugins/bkpr/channel_event.h		\
