bkpr: helpers to query sql plugin for chainmoves and channelmoves.
We're going to be using this instead of our internal db.

I also made json_out_obj() take the str arg, as it didn't and I
expected it to.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/bkpr/Makefile
+++ b/plugins/bkpr/Makefile
@@ -13,7 +13,8 @@ BOOKKEEPER_PLUGIN_SRC := 			\
 	plugins/bkpr/incomestmt.c		\
 	plugins/bkpr/onchain_fee.c		\
 	plugins/bkpr/rebalances.c		\
-	plugins/bkpr/recorder.c
+	plugins/bkpr/recorder.c			\
+	plugins/bkpr/sql.c
 
 BOOKKEEPER_DB_QUERIES := 			\
 	plugins/bkpr/db_sqlite3_sqlgen.c 	\
@@ -33,7 +34,8 @@ BOOKKEEPER_HEADER := 				\
 	plugins/bkpr/incomestmt.h		\
 	plugins/bkpr/onchain_fee.h		\
 	plugins/bkpr/rebalances.h		\
-	plugins/bkpr/recorder.h
+	plugins/bkpr/recorder.h			\
+	plugins/bkpr/sql.h
 
 BOOKKEEPER_OBJS := $(BOOKKEEPER_SRC:.c=.o)
 
