lightningd: migrate events from bookkeeper at startup.
We take over the --bookkeeper-dir and --bookkeeper-db options, and
then if we can find the bookkeeper db we extract the records to
initialize our chain_moves and channel_moves tables.

Of course, bookkeeper now needs to not register those options.

When bookkeeper gets invoked the first time, it will reconstruct
everything from listchannelmoves and listcoinmoves.  It cannot
preserve manually-added descriptions, so we put those in the datastore
for it ready to go.

Note that the order of onchain_fee changes slightly from the original.
But this is fine.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/wallet/Makefile
+++ b/wallet/Makefile
@@ -1,6 +1,7 @@
 #! /usr/bin/make
 
 WALLET_LIB_SRC :=		\
+	wallet/account_migration.c \
 	wallet/db.c		\
 	wallet/invoices.c	\
 	wallet/psbt_fixup.c	\
@@ -30,6 +31,7 @@ ALL_C_HEADERS += $(WALLET_HDRS)
 # The following files contain SQL-annotated statements that we need to extact
 WALLET_SQL_FILES := 			\
 	$(DB_SQL_FILES)			\
+	wallet/account_migration.c	\
 	wallet/db.c 			\
 	wallet/invoices.c		\
 	wallet/wallet.c 		\
