bkpr: restore run-recorder.
This requires us to turn "sql" calls into calls to a local db, which
means pulling in a lot of infrastructure.  But it's possible.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/plugins/bkpr/test/Makefile
+++ b/plugins/bkpr/test/Makefile
@@ -13,6 +13,7 @@ BOOKKEEPER_TEST_COMMON_OBJS :=			\
 	common/channel_type.o			\
 	common/coin_mvt.o			\
 	common/features.o			\
+	common/json_parse.o			\
 	common/json_stream.o			\
 	common/json_parse_simple.o		\
 	common/key_derive.o			\
