--- a/contrib/reprobuild/Dockerfile.focal
+++ b/contrib/reprobuild/Dockerfile.focal
@@ -3,7 +3,7 @@ FROM focal
 ENV TZ=UTC
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 ENV RUST_PROFILE=release
-ENV PATH=/root/.pyenv/shims:/root/.pyenv/bin:/root/.cargo/bin:$PATH
+ENV PATH=/root/.pyenv/shims:/root/.pyenv/bin:/root/.cargo/bin:/root/.local/bin:$PATH
 ENV PROTOC_VERSION=29.4
 
 RUN sed -i '/updates/d' /etc/apt/sources.list && \
@@ -47,10 +47,7 @@ RUN git clone https://github.com/pyenv/pyenv.git /root/.pyenv && \
     pyenv install 3.10.0 && \
     pyenv global 3.10.0
 
-RUN wget https://bootstrap.pypa.io/get-pip.py -O /tmp/get-pip.py && python3 /tmp/get-pip.py \
-    && rm /tmp/get-pip.py \
-    && pip install poetry==2.0.1 mako grpcio-tools==1.62.2 && \
-    poetry self add poetry-plugin-export
+RUN wget -qO- https://astral.sh/uv/install.sh | sh
 
 RUN wget https://sh.rustup.rs -O rustup-install.sh && \
     bash rustup-install.sh --default-toolchain none --quiet -y && \
@@ -73,7 +70,6 @@ WORKDIR /build
 # uncommitted changes in the working directory on the host. Notice
 # that we no longer take the zipfile.
 CMD git clone /repo . \
-    && poetry export -o requirements.txt --without-hashes \
-    && pip install -r requirements.txt \
-    && tools/repro-build.sh \
+    && uv sync --all-extras --all-groups \
+    && uv run tools/repro-build.sh \
     && cp *.xz /repo/release/
