--- a/contrib/docker/Dockerfile.builder.fedora
+++ b/contrib/docker/Dockerfile.builder.fedora
@@ -1,6 +1,8 @@
 FROM fedora:35
 
+ENV UV_PYTHON=3.12
 ENV BITCOIN_VERSION=27.1
+
 WORKDIR /tmp
 
 RUN dnf update -y && \
@@ -10,11 +12,6 @@ RUN dnf update -y && \
 	dnf install -y \
 		clang \
 		libsq3-devel \
-		python3-devel \
-		python3-mako \
-        python3-pip \
-        python3-virtualenv \
-		python3-setuptools \
 		redhat-lsb \
 		net-tools \
 		valgrind \
@@ -26,8 +23,6 @@ RUN dnf update -y && \
 		cargo && \
 	dnf clean all
 
-RUN python3 -m pip install uv
-
 RUN wget https://bitcoincore.org/bin/bitcoin-core-$BITCOIN_VERSION/bitcoin-$BITCOIN_VERSION-x86_64-linux-gnu.tar.gz -O bitcoin.tar.gz && \
     tar -xvzf bitcoin.tar.gz && \
     mv bitcoin-$BITCOIN_VERSION/bin/bitcoin* /usr/local/bin/ && \
@@ -36,8 +31,6 @@ RUN wget https://bitcoincore.org/bin/bitcoin-core-$BITCOIN_VERSION/bitcoin-$BITC
     mv bitcoin-$BITCOIN_VERSION/share/man/man1/* /usr/share/man/man1 && \
     rm -rf bitcoin.tar.gz bitcoin-$BITCOIN_VERSION
 
-ENV PATH=/opt/venv/bin:${PATH}
-RUN python3 -m pip install pip wheel && \
-    python3 -m virtualenv /opt/venv && \
-    /opt/venv/bin/python3 -m pip install --force-reinstall -U pip poetry wheel
-RUN poetry self add poetry-plugin-export
+# Ensure `uv` can be found
+ENV PATH=${PATH}:/root/.local/bin
+RUN wget -qO- https://astral.sh/uv/install.sh | sh
