--- a/contrib/docker/Dockerfile.builder.fedora
+++ b/contrib/docker/Dockerfile.builder.fedora
@@ -23,7 +23,8 @@ RUN dnf update -y && \
 		cargo && \
 	dnf clean all
 
-RUN wget https://bitcoincore.org/bin/bitcoin-core-$BITCOIN_VERSION/bitcoin-$BITCOIN_VERSION-x86_64-linux-gnu.tar.gz -O bitcoin.tar.gz && \
+RUN wget https://storage.googleapis.com/c-lightning-tests/bitcoind/bitcoin-${BITCOIN_VERSION}-x86_64-linux-gnu.tar.gz \
+    -O bitcoin.tar.gz && \
     tar -xvzf bitcoin.tar.gz && \
     mv bitcoin-$BITCOIN_VERSION/bin/bitcoin* /usr/local/bin/ && \
     mv bitcoin-$BITCOIN_VERSION/lib/* /usr/local/lib/ && \
