--- a/plugins/bip353-plugin/Cargo.toml
+++ b/plugins/bip353-plugin/Cargo.toml
@@ -19,9 +19,7 @@ log-panics = "2"
 
 cln-plugin = { version = "0.5", path = "../../plugins" }
 
-bitcoin-payment-instructions = { git = "https://github.com/rust-bitcoin/bitcoin-payment-instructions.git", rev = "d071ce27734ca13be2471f81abf8699d902c3a10", features = [
-    "http",
-] }
+bitcoin-payment-instructions = { version = "0.5.0", features = ["http"] }
 
 reqwest = { version = "0.11", default-features = false, features = [
     "rustls-tls",
